# dev-right-hand

./: .gitignore  CLAUDE.md  LICENSE  README.md  agents.py  caveman_prompt.py  crew.py  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  python-files-technical-reference.md  roadmap.md
src/dev_right_hand/: __init__.py  cli.py  config.py  contracts.py  orchestrator.py  tracking.py
src/dev_right_hand/agents/: __init__.py  base.py  code_review.py  data_quality.py  llm_safety.py  ml_validation.py  observability.py
tests/: test_agents.py  test_orchestrator.py  test_tracking.py
